# pkg/requests/requests.go
@@ -7,6 +7,10 @@ type SignInWithWalletRequest struct {
 type SignOutRequest struct {
 }
 
+type RefreshTokensRequest struct {
+	RefreshToken string `json:"refresh_token" validate:"required"`
+}
+
 type VerifySignatureRequest struct {
 	WalletPub string `json:"wallet_pub" validate:"required,eth_addr"`
 	Signature string `json:"signature" validate:"required"`
