# pkg/response/responses.go
@@ -1,14 +1,14 @@
 package response
 
 type SignInWithWalletResponse struct {
-	Nonce string `json:"nonce"`
+	Nonce string `json:"nonce" validate:"required"`
 }
 
 type VerifySignatureResponse struct {
-	AccessToken  string `json:"access_token"`
-	RefreshToken string `json:"refresh_token"`
+	AccessToken  string `json:"access_token" validate:"required"`
+	RefreshToken string `json:"refresh_token" validate:"required"`
 }
 
 type ErrorResponse struct {
-	Error string `json:"error"`
+	Error string `json:"error" validate:"required"`
 }
